Revert to jdk17 for CCRL compatibility